--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Previsão do Tempo</title>
     <link rel="stylesheet" href="main.css" />
     <script src="app.js" defer></script>
+    <link rel="shortcut icon" href="img/weather-forecast.png" type="image/x-icon">
   </head>
   <body>
     <section>
