update_title_local

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </button>
       </div>
       <button id="takeLocation">Usar minha localização</button>
-      <h2 id="localAtual">São Paulo</h2>
+      <h2 id="localAtual">Faça uma busca</h2>
       <div class="temp">
         <p>Temperatura Atual: <span id="weatherTemp">0</span>ºC</p>
         <p>Máxima: <span id="TempMax">0</span>ºC</p>
