--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section>
       <div class="localDiv">
-        <input type="text" name="local" id="local" /><button
+        <input type="text" name="local" id="local" placeholder="Pesquise um local" /><button
           id="searchLocation"
         >
           <img src="img/lupa.png" alt="Lupa" />
